lighten events, fix horizontal scroll

--- a/mosey.css
+++ b/mosey.css
@@ -33,8 +33,10 @@ a:hover {
 
 /* lines */
 .line { 
-  border-left: 8px solid #CCC; 
-  border-right: 8px solid #CCC;
+  border-left: 5px solid #CCC; 
+  border-right: 5px solid #CCC;
+  padding: 0;
+  margin: 0;
 }
 .line[alternate=even] {}
 .line[alternate=odd] {}
@@ -47,8 +49,8 @@ a:hover {
   content: ""
 }
 .line[highlight=true] {
-  border-left: 8px solid #666;
-  border-right: 8px solid #666;
+  border-left: 5px solid #666;
+  border-right: 5px solid #666;
 }
 .message {
   margin-left: 95px;
@@ -65,10 +67,10 @@ a:hover {
   color: #1A5B93;
 }
 .event {
-  color: #666;
+  color: #999;
 }
 .event .message {
-  color: #666;
+  color: #999;
 }
 .time {
   float: right;
